discussion/kv_engine/170266/170266_rev22_discussion.txt
======================================================================================================================
DESCRIPTION:

MB-49512: FollyExecutorPool cancel tasks in cpuPool queue

Add a mechanism to remove work for a given taskable from the
cpuPool queue.

This is implemented by interposing our own queue of work underneath
the queue in the cpuPool to allow us to remove tasks from the queue
when we unregister a taskable. Now, when we schedule a task we
enqueue it in a queue in a custom executor and schedule a task on the
base executor to pop a task from the queue and run it. To remove tasks
when we unregister a taskable we pop all elements of our queue and
re-push only those of the other taskables and manually cancel each
task for the taskable going away.

Change-Id: Idcbf1737b80c3d3b92ed62adb3d4d164a2cf4266

======================================================================================================================
COMMENTS
======================================================================================================================
Author: Ben Huddleston
Date: 2022-02-10 19:25:51.000000000
Message: 
Uploaded patch set 22.
----------------------------------------------------------------------------------------------------------------------
Author: Build Bot
Date: 2022-02-10 19:50:39.000000000
Message: 
Patch Set 22: Verified-1 Code-Review-1

Build Failed 

http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/15504/ : FAILURE

clang-tidy found the following problems:

<pre>
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/build-kv_engine-clang-tidy/tlm/deps/folly.exploded/include/folly/portability/GMock.h:32:10: error: "gmock/gmock.h" file not found [clang-diagnostic-error]
#include <gmock/gmock.h>
         ^

</pre> ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/15504/ )

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/build-kv_engine-clang-tidy/tlm/deps/folly.exploded/include/folly/portability/GMock.h:32:10:
error: "gmock/gmock.h" file not found [clang-diagnostic-error]
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/15504/ )

http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/25646/ : FAILURE

Failure of GoogleTest "ExecutorPoolTest/0.ScheduleCancelx2":

<pre>
[ RUN      ] ExecutorPoolTest/0.ScheduleCancelx2
[2022-02-10T19:42:05.388Z] ../kv_engine/engines/ep/tests/module_tests/executorpool_test.cc:731: Failure
[2022-02-10T19:42:05.388Z] Value of: this->pool->cancel(taskId, false)
[2022-02-10T19:42:05.388Z]   Actual: false
[2022-02-10T19:42:05.388Z] Expected: true
[2022-02-10T19:42:05.388Z] [  FAILED  ] ExecutorPoolTest/0.ScheduleCancelx2, where TypeParam = TestExecutorPool (4 ms)
ExecutorPoolTest/0.ScheduleCancelx2
</pre>
 ( http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/25646/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_format_9/14346/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/43809/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/36940/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/16321/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.aarch64-linux/job/master/5213/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.libFuzzer/job/master/5152/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/17238/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/17546/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/18280/ : SUCCESS
----------------------------------------------------------------------------------------------------------------------
